Fixing The Routes For Swaggo
